fixed about example images to be column on smaller screens

--- a/src/components/Atoms/Pictures/AboutPhotos/aboutImg1.css
+++ b/src/components/Atoms/Pictures/AboutPhotos/aboutImg1.css
@@ -1,9 +1,4 @@
 .aboutImg1 {
     height: 467px;
-}
-
-@media screen and (max-width: 600px) {
-    .aboutImg1 {
-        height: 300px;
-    }
+    margin: 2.5% 0 2.5% 0;
 }
