--- a/src/components/Atoms/Pictures/AboutPhotos/aboutImg2.css
+++ b/src/components/Atoms/Pictures/AboutPhotos/aboutImg2.css
@@ -1,9 +1,5 @@
 .aboutImg2 {
     height: 467px;
+    margin: 2.5% 0 2.5% 0;
 }
 
-@media screen and (max-width: 600px) {
-    .aboutImg2 {
-        height: 300px;
-    }
-}
