--- a/src/components/Molecules/AboutSection/photoContainer.css
+++ b/src/components/Molecules/AboutSection/photoContainer.css
@@ -5,3 +5,11 @@
     justify-content: space-evenly;
     padding-bottom: 10%;
 }
+
+@media screen and (max-width: 1200px) {
+    .photoContainer {
+        padding: 5% 0 5% 0;
+        flex-direction: column;
+        align-items: center;
+    }
+}
